fixed main section margin left on mobile

--- a/css/learnful-theme.css
+++ b/css/learnful-theme.css
@@ -38,9 +38,13 @@ body.navbar-is-fixed-top {
     margin-top: 60px;
 }
 body.sidebar-first section.main-section {
-    margin-left: 16.66666667%;
+    margin-left: 0%;
 }
-
+@media (min-width: 768px) {
+    body.sidebar-first section.main-section {
+        margin-left: 16.66666667%;
+    }
+}
 .navbar-default {
     background-color: var(--white);
     border: unset;
@@ -65,7 +69,7 @@ aside.sidebar-left.is-open {
     aside.sidebar-left {
         position: fixed;
         top: unset;
-        left: 0px;
+        left: 0px !important;
         width: 16%;
     }
 }
